--- a/assignment/assignment_programming.ipynb
+++ b/assignment/assignment_programming.ipynb
@@ -272,12 +272,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "f42ab788-af0c-47a4-a103-46c9a37bfad3",
       "metadata": {
-        "id": "f42ab788-af0c-47a4-a103-46c9a37bfad3"
+        "id": "f42ab788-af0c-47a4-a103-46c9a37bfad3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "21783800-f036-4361-a013-3aa8b1878755"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-1.0899806430403438\n",
+            "mean std: 3.2847981697718236\n",
+            "Sample Standard Deviation: 3.2847981697718236 \n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "import math as math\n",
@@ -290,7 +305,24 @@
         "x = sample[:,0]\n",
         "y = sample[:,1]\n",
         "\n",
-        "#############################################################################\n"
+        "#############################################################################\n",
+        "\n",
+        "def mean(x):\n",
+        "  m = np.sum(x) / len(x)\n",
+        "  return m\n",
+        "\n",
+        "print(mean(x))\n",
+        "\n",
+        "def std(x):\n",
+        "  blank_list = []\n",
+        "  for i in range(0,len(x)):\n",
+        "    val = (x[i] - mean(x))**2\n",
+        "    blank_list.append(val)\n",
+        "  s = np.sqrt(sum(blank_list) / (len(x) - 1))\n",
+        "  return s\n",
+        "\n",
+        "print(\"mean std:\", std(x))\n",
+        "\n"
       ]
     },
     {
