--- a/assignment/assignment_programming.ipynb
+++ b/assignment/assignment_programming.ipynb
@@ -272,14 +272,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 16,
       "id": "f42ab788-af0c-47a4-a103-46c9a37bfad3",
       "metadata": {
         "id": "f42ab788-af0c-47a4-a103-46c9a37bfad3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "21783800-f036-4361-a013-3aa8b1878755"
+        "outputId": "94fb30f7-550a-4f1c-d58f-cd24ceb1a52a"
       },
       "outputs": [
         {
@@ -288,8 +288,7 @@
           "text": [
             "-1.0899806430403438\n",
             "mean std: 3.2847981697718236\n",
-            "Sample Standard Deviation: 3.2847981697718236 \n",
-            "\n"
+            "sample covarience: -2.8396505928938773\n"
           ]
         }
       ],
@@ -322,6 +321,18 @@
         "  return s\n",
         "\n",
         "print(\"mean std:\", std(x))\n",
+        "\n",
+        "\n",
+        "def cov(x,y):\n",
+        "  blank_list = []\n",
+        "  for i in range(0,len(x)):\n",
+        "    val = (x[i]-mean(x)) * (y[i]-mean(y))\n",
+        "    blank_list.append(val)\n",
+        "  s = np.sum(blank_list) / (len(x) - 1)\n",
+        "  return s\n",
+        "\n",
+        "print(\"sample covarience:\", cov(x,y))\n",
+        "\n",
         "\n"
       ]
     },
