--- a/assignment/assignment_programming.ipynb
+++ b/assignment/assignment_programming.ipynb
@@ -272,23 +272,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 19,
       "id": "f42ab788-af0c-47a4-a103-46c9a37bfad3",
       "metadata": {
         "id": "f42ab788-af0c-47a4-a103-46c9a37bfad3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "94fb30f7-550a-4f1c-d58f-cd24ceb1a52a"
+        "outputId": "03862614-a533-4c77-f1e4-365f2af874f0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "-1.0899806430403438\n",
-            "mean std: 3.2847981697718236\n",
-            "sample covarience: -2.8396505928938773\n"
+            "sample mean: -1.0899806430403438\n",
+            "sample standard deviation: 3.2847981697718236\n",
+            "sample covarience: -2.8396505928938773\n",
+            "correlation coefficient -0.4220509392126486\n"
           ]
         }
       ],
@@ -310,7 +311,7 @@
         "  m = np.sum(x) / len(x)\n",
         "  return m\n",
         "\n",
-        "print(mean(x))\n",
+        "print(\"sample mean:\",mean(x))\n",
         "\n",
         "def std(x):\n",
         "  blank_list = []\n",
@@ -320,7 +321,7 @@
         "  s = np.sqrt(sum(blank_list) / (len(x) - 1))\n",
         "  return s\n",
         "\n",
-        "print(\"mean std:\", std(x))\n",
+        "print(\"sample standard deviation:\", std(x))\n",
         "\n",
         "\n",
         "def cov(x,y):\n",
@@ -333,6 +334,11 @@
         "\n",
         "print(\"sample covarience:\", cov(x,y))\n",
         "\n",
+        "def cor(x,y):\n",
+        "  r = cov(x,y) / (std(x) * std(y))\n",
+        "  return r\n",
+        "\n",
+        "print(\"correlation coefficient\",cor(x,y))\n",
         "\n"
       ]
     },
